<resources>
    <string name="app_name">PocketChef</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_ingredients">Ингредиенты</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="guest">Guest</string>
    <string name="restore_password">Restore password</string>
    <string name="create_account">Create account</string>
    <string name="title">Авторизация</string>
    <string name="supporting_text">Пожалуйста войдите в свой аккаун или создайте новый.</string>
    <string name="later">Потом</string>
    <string name="decline">Войти</string>
    <string name="signIn">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="ingredient_count_hint">Количество</string>
    <string name="title_ingredients_text">Список ингредиентов</string>
</resources>